--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+public/
 
 # Dependency directories
 node_modules
